--- a/LibraryProject/Properties/Resources.resx
+++ b/LibraryProject/Properties/Resources.resx
@@ -121,13 +121,55 @@
   <data name="books1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\books.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SvetilnikBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SvetilnikBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VapcarovBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\VapcarovBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="GoBack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GoBack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CloseProgramm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CloseProgramm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="StulbataBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StulbataBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BaiGBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BaiGBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ENZBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ENZBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NoevBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NoevBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SindromBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SindromBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BorbaBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BorbaBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VLRBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\VLRBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="KradecaBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\KradecaBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="GoRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GoRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="AndreshkoBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AndreshkoBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LibeBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LibeBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="QvorBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\QvorBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SpiBook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SpiBook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
